# llm-wiki

./: .gitignore  AGENTS.md  BACKLOG.csv  Cargo.toml  README.en.md  README.md  README.zh-CN.md
docs/: ARCHITECTURE.md  EXECUTION_PLAN_zh.md  PILOT_RUNBOOK.md  SEARCH_SCALING.md  llm-wiki-plan-summary.md  pure-karpathy-core-plan.md
docs/plans/: 2026-04-09-001-feat-llm-wiki-mvp-and-agent-cli-plan.md  2026-04-10-002-feat-multi-harness-skill-and-shared-cli-install-plan.md
skill-src/llm-wiki/: SKILL.md
skill-src/llm-wiki/scripts/: llmwikiw.cmd  llmwikiw.sh
src/: cli.rs  index.rs  install.rs  lib.rs  lint.rs  logbook.rs  main.rs  markdown.rs  prompt.rs  repo.rs  scan.rs  sidecar.rs  source_id.rs  state.rs
src/commands/: convert.rs  doctor.rs  init.rs  install.rs  install_sidecar.rs  lint.rs  list.rs  mod.rs  prepare_ingest.rs  rebuild_index.rs  recent.rs  skill.rs  sync_state.rs
src/convert/: mod.rs
src/skill/: assets.rs  doctor.rs  install.rs  mod.rs  render.rs  targets.rs
state/: README.md
templates/: README.md  concept.md  entity.md  question.md  source-summary.md  synthesis.md  timeline.md
tests/: cli_init.rs  convert_command.rs  index_rebuild.rs  install_command.rs  lint_bridge.rs  lint_mechanical.rs  logbook.rs  markdown_parse.rs  prepare_ingest_command.rs  read_only_commands.rs  skill_doctor_command.rs  skill_install_command.rs  sync_state.rs
tests/support/: mod.rs
wiki/_meta/: index.md  log.md
